# gascal

./: .gitignore  CMakeLists.txt  Makefile  README.md  mag  mag.cxx  plot  plot.cxx
dat/: .gitignore
